--- a/HTML-5_CSS-3/Cours/1-Introduction/SelecteursCSS/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/SelecteursCSS/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Les principales balises</title>
+    <title>Les selecteurs en CSS</title>
 </head>
 <body>
     test
