Ajout liens medias

--- a/HTML-5_CSS-3/Cours/1-Introduction/LesLiens/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesLiens/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Les liens (redirection)</title>
 </head>
+
 <body>
     <h1>Le routing d'une application</h1>
 
     <!-- <a href="../LesFormulaires/page2.html"></a> -->
     <a href="./page2.html">Page 2</a>
+
+    <h2>Insertion image</h2>
+    <!-- <img src="./img/img1.jpg" alt="Photo du cabinet mécal" height="300px"> -->
+    <img src="./img/img1.jpg" alt="Photo du cabinet mécal" class="img">
+
+    <h2>Insertion audio dans la page</h2>
+    <!-- <audio src="./assets/monfichier.wav"></audio> -->
+
+    <h2>Insertion video</h2>
+    <!-- <video src="./assets/Monfichier.mp4"></video> -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ACMA_-FtZ0Q" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 </body>
+
 </html>
