Correction Cabinet medical

--- a/HTML-5_CSS-3/Exercices/CabinetMedical/horaires.html
+++ b/HTML-5_CSS-3/Exercices/CabinetMedical/horaires.html
@@ -10,10 +10,10 @@
 </head>
 <body>
         <h1>Horaires</h1>
-        <div class="menu">
+        <nav class="menu">
                 <a href="index.html">Accueil</a> |
                 <a href="contact.html">Contact</a>            
-        </div>
+        </nav>
         <div class="container">
             <table>
                 <tr>
@@ -25,7 +25,7 @@
                     <th> Vendredi </th>
                 </tr>
                 <tr>
-                    <td>Matin</td>
+                    <th>Matin</th>
                     <td>9h00 - 12h00</td>
                     <td>9h00 - 12h00</td>
                     <td>9h00 - 12h00</td>
@@ -33,7 +33,7 @@
                     <td>9h00 - 12h00</td>
                 </tr>
                 <tr>
-                        <td>A.Midi</td>
+                        <th>A.Midi</th>
                         <td>14h00 - 18h00</td>
                         <td>FERME</td>
                         <td>13h00 - 17h00</td>
