--- a/HTML-5_CSS-3/Exercices/CabinetMedical/index.html
+++ b/HTML-5_CSS-3/Exercices/CabinetMedical/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <h1>Cabinet médical du DrFondeur</h1>
-    <div class="menu">
+    <nav class="menu">
             <a href="horaires.html">Horaires</a> |
             <a href="contact.html">Contact</a>            
-    </div>
+    </nav>
     <div class="container">
             <img src="images/img1.jpg" alt="exemple de texte alternatif"/>
             <img src="images/img2.jpg" alt="exemple de texte alternatif"/>
