Modification formulaire type bouton

--- a/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/index.html
@@ -74,8 +74,8 @@
                 &lt;div&gt;
             </div>
             <div>
-                <input type="button" value="Valider">
-                <button>Annuler</button>
+                <input type="submit" type="button" value="Valider">
+                <button type="reset">Annuler</button>
             </div>
         </fieldset>
     </div>
