--- a/HTML-5_CSS-3/Cours/1-Introduction/LesListes/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesListes/index.html
@@ -25,6 +25,22 @@
         <li>Travailler le C#</li>
         <li>Réaliser des projets persos</li>
     </ol>
+
+    <h2>Liste avec des nombres</h2>
+    <p>Liste de choses à faire : </p>
+    <ul>
+        <li class="imgRouge">Apprendre l'algo</li>
+        <li class="imgOrange">Travailler le C#</li>
+        <li Class="imgVert">Réaliser des projets persos</li>
+    </ul>
+
+    <h2>Liste avec des nombres</h2>
+    <p>Liste de choses à faire : </p>
+    <ul>
+        <li class="fontStyle">Apprendre l'algo</li>
+        <li class="fontStyle">Travailler le C#</li>
+        <li Class="fontStyle">Réaliser des projets persos</li>
+    </ul>
 </body>
 
 </html>
