Ajout CSS Tableaux

--- a/HTML-5_CSS-3/Cours/1-Introduction/LesTableaux/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesTableaux/index.html
@@ -11,7 +11,7 @@
     <h1>Les tableaux en HTML</h1>
 
     <table class="bdCollapse">
-        <caption>Le titre de mon tableau</caption>
+        <caption>Avec Border Collapse</caption>
         <thead>    
             <th></th>       
             <th>Titre colonne 1</th>
@@ -33,7 +33,7 @@
     </table>
 
     <table>
-        <caption>Le titre de mon tableau</caption>
+        <caption>Sans Border Collapse</caption>
         <thead>    
             <th></th>       
             <th>Titre colonne 1</th>
@@ -50,6 +50,88 @@
             <th>Ma ligne 2</th>
             <td>Ma cellule 4</td>
             <td>Ma cellule 5555555555555</td>
+            <td>Ma cellule 6</td>
+        </tr>
+    </table>
+
+    <table class="dashed">
+        <caption>Avec des border Différents</caption>
+        <thead>    
+            <th></th>       
+            <th>Titre colonne 1</th>
+            <th>Titre colonne 2</th>
+            <th>Titre colonne 3</th>
+        </thead>
+        <tr class="dashed">
+            <th>Ma ligne 1</th>
+            <td>Ma cellule 1</td>
+            <td>Ma cellule 2</td>
+            <td>Ma cellule 3</td>
+        </tr>
+        <tr>
+            <th>Ma ligne 2</th>
+            <td>Ma cellule 4</td>
+            <td>Ma cellule 5</td>
+            <td>Ma cellule 6</td>
+        </tr>
+    </table>
+    <table class="dotted">        
+        <thead>    
+            <th></th>       
+            <th>Titre colonne 1</th>
+            <th>Titre colonne 2</th>
+            <th>Titre colonne 3</th>
+        </thead>
+        <tr class="dotted">
+            <th>Ma ligne 1</th>
+            <td>Ma cellule 1</td>
+            <td>Ma cellule 2</td>
+            <td>Ma cellule 3</td>
+        </tr>
+        <tr>
+            <th>Ma ligne 2</th>
+            <td>Ma cellule 4</td>
+            <td>Ma cellule 5</td>
+            <td>Ma cellule 6</td>
+        </tr>
+    </table>
+    <table class="double">        
+        <thead>    
+            <th></th>       
+            <th>Titre colonne 1</th>
+            <th>Titre colonne 2</th>
+            <th>Titre colonne 3</th>
+        </thead>
+        <tr>
+            <th>Ma ligne 1</th>
+            <td>Ma cellule 1</td>
+            <td>Ma cellule 2</td>
+            <td>Ma cellule 3</td>
+        </tr>
+        <tr>
+            <th>Ma ligne 2</th>
+            <td>Ma cellule 4</td>
+            <td>Ma cellule 5</td>
+            <td>Ma cellule 6</td>
+        </tr>
+    </table>
+    <table class="ridge">        
+        <thead>    
+            <th></th>       
+            <th>Titre colonne 1</th>
+            <th>Titre colonne 2</th>
+            <th>Titre colonne 3</th>
+        </thead>
+        <tr>
+            <th>Ma ligne 1</th>
+            <td>Ma cellule 1</td>
+            <td>Ma cellule 2</td>
+            <td>Ma cellule 3</td>
+        </tr>
+        <tr>
+            <th>Ma ligne 2</th>
+            <td>Ma cellule 4</td>
+            <td>Ma cellule 5</td>
             <td>Ma cellule 6</td>
         </tr>
     </table>
