--- a/HTML-5_CSS-3/Cours/2-FlexBox/index.html
+++ b/HTML-5_CSS-3/Cours/2-FlexBox/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="cont-item spaced">DEBUT</div>
+        <!-- <div class="cont-item spaced">DEBUT</div>
         <div class="spaced">DIV1</div>
         <div class="cont-item spaced">DIV2</div>
         <div class="spaced">DIV3</div>
         <div class="spaced">DIV4</div>
         <div class="cont-item spaced">DIV5</div>
-        <div class="spaced">FIN</div>
+        <div class="spaced">FIN</div> -->
+
+        <div class="cont-item order3">AAA</div>
+        <div class="cont-item obj1 order1">BBB</div>
+        <div class="cont-item obj2 order2">CCC</div>
     </div>
 </body>
 </html>
