Remplacement fausse manipulation Flexboxes_RGB

--- a/HTML-5_CSS-3/Exercices/Flexboxes_RGB/index.html
+++ b/HTML-5_CSS-3/Exercices/Flexboxes_RGB/index.html
@@ -11,11 +11,20 @@
     <header>
 
     </header>
-    <aside>
-        
-    </aside>
     <main>
-        
+        <div id="divContainer">
+            <div id="div1">
+                Div A
+            </div>
+            <div id="div2">
+                Div B
+            </div>
+            <div id="div3">
+                Div C
+        </div>
+
+
+        </div>
     </main>
     <footer>
 
