Ajout Partie Grid

--- a/HTML-5_CSS-3/Cours/3-Grid/index.html
+++ b/HTML-5_CSS-3/Cours/3-Grid/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Grid en CSS</title>
+    <title>Grille en CSS (Grid)</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="item iA">A</div>
+        <div class="item iB">B</div>
+        <div class="item iC">C</div>
+        <div class="item iD">D</div>
+        <div class="item iE">E</div>
+        <div class="item iF">F</div>
+        <div class="item iG">G</div>
+        <div class="item iH">H</div>
+    </div>
+
+    <div class="wrapper">
+        <div class="item one">Un</div>
+        <div class="item two">Deux</div>
+        <div class="item three">Trois</div>
+        <div class="item four">Quatre</div>
+        <div class="item five">Cinq</div>
+        <div class="item six">Six</div>
+    </div>
 </body>
+
 </html>
