--- a/HTML-5_CSS-3/Cours/4-Transform/index.html
+++ b/HTML-5_CSS-3/Cours/4-Transform/index.html
@@ -51,7 +51,7 @@
             </a>
             <a href="">
                 <div class="vignette">
-                    <img src="./img/LogoWord.png" alt="Logo Word"  class="img">
+                    <img src="./img/LogoWord.png" alt="Logo Word"  class="img"4>
                 </div>
             </a>
         </div>
