Ajout Checkbox CSS

--- a/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/index.html
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/index.html
@@ -39,6 +39,16 @@
                 <input type="checkbox" name="C#"><label>C#</label>
                 <input type="checkbox" name="Js" checked><label>JS</label>
             </div>
+            <!-- CheckBox personnalisée-->
+            <div class="space">
+                <label>Maitrisez-vous le C#?</label>
+                <label class="ck_label">
+                    <input type="checkbox" id="ch1" name="ch1" class="btn_chb" />
+                    <span id="snon">NON</span>
+                    <span id="soui">OUI</span>
+                    <span id="round"></span>
+                </label>
+            </div>
             <div class="space">
                 <label>Liste de villes</label>
                 <select name="ville">
