--- a/HTML-5_CSS-3/Cours/7-Bootstrap/badge.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/badge.html
@@ -12,56 +12,58 @@
 
 <body>
 
-    <h1>Example de Badges <span class="badge bg-secondary">New</span></h1>
-    <h2>Example de Badges <span class="badge bg-secondary">New</span></h2>
-    <h3>Example de Badges <span class="badge bg-secondary">New</span></h3>
-    <h4>Example de Badges <span class="badge bg-secondary">New</span></h4>
-    <h5>Example de Badges <span class="badge bg-secondary">New</span></h5>
-    <h6>Example de Badges <span class="badge bg-secondary">New</span></h6>
+    <div class="container">
+        <h1>Example de Badges <span class="badge bg-secondary">New</span></h1>
+        <h2>Example de Badges <span class="badge bg-secondary">New</span></h2>
+        <h3>Example de Badges <span class="badge bg-secondary">New</span></h3>
+        <h4>Example de Badges <span class="badge bg-secondary">New</span></h4>
+        <h5>Example de Badges <span class="badge bg-secondary">New</span></h5>
+        <h6>Example de Badges <span class="badge bg-secondary">New</span></h6>
 
-    <h1>Buttons</h1>
-    <button type="button" class="btn btn-primary">
-        Notifications <span class="badge bg-secondary">4</span>
-    </button>
-
-    <h1>Positioned</h1>
-    <div>
-        <button type="button" class="btn btn-primary position-relative">
-            Inbox
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                99+
-                <span class="visually-hidden">unread messages</span>
-            </span>
+        <h1>Buttons</h1>
+        <button type="button" class="btn btn-primary">
+            Notifications <span class="badge bg-secondary">4</span>
         </button>
-    </div>
-    <div><button type="button" class="btn btn-primary position-relative">
-            Profile
-            <span
-                class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
-                <span class="visually-hidden">New alerts</span>
-            </span>
-        </button>
-    </div>
 
-    <h1>Background colors</h1>
-    <span class="badge bg-primary">Primary</span>
-    <span class="badge bg-secondary">Secondary</span>
-    <span class="badge bg-success">Success</span>
-    <span class="badge bg-danger">Danger</span>
-    <span class="badge bg-warning text-dark">Warning</span>
-    <span class="badge bg-info text-dark">Info</span>
-    <span class="badge bg-light text-dark">Light</span>
-    <span class="badge bg-dark">Dark</span>
+        <h1>Positioned</h1>
+        <div>
+            <button type="button" class="btn btn-primary position-relative">
+                Inbox
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    99+
+                    <span class="visually-hidden">unread messages</span>
+                </span>
+            </button>
+        </div>
+        <div><button type="button" class="btn btn-primary position-relative">
+                Profile
+                <span
+                    class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                    <span class="visually-hidden">New alerts</span>
+                </span>
+            </button>
+        </div>
 
-    <h1>Pill badges</h1>
-    <span class="badge rounded-pill bg-primary">Primary</span>
-    <span class="badge rounded-pill bg-secondary">Secondary</span>
-    <span class="badge rounded-pill bg-success">Success</span>
-    <span class="badge rounded-pill bg-danger">Danger</span>
-    <span class="badge rounded-pill bg-warning text-dark">Warning</span>
-    <span class="badge rounded-pill bg-info text-dark">Info</span>
-    <span class="badge rounded-pill bg-light text-dark">Light</span>
-    <span class="badge rounded-pill bg-dark">Dark</span>
+        <h1>Background colors</h1>
+        <span class="badge bg-primary">Primary</span>
+        <span class="badge bg-secondary">Secondary</span>
+        <span class="badge bg-success">Success</span>
+        <span class="badge bg-danger">Danger</span>
+        <span class="badge bg-warning text-dark">Warning</span>
+        <span class="badge bg-info text-dark">Info</span>
+        <span class="badge bg-light text-dark">Light</span>
+        <span class="badge bg-dark">Dark</span>
+
+        <h1>Pill badges</h1>
+        <span class="badge rounded-pill bg-primary">Primary</span>
+        <span class="badge rounded-pill bg-secondary">Secondary</span>
+        <span class="badge rounded-pill bg-success">Success</span>
+        <span class="badge rounded-pill bg-danger">Danger</span>
+        <span class="badge rounded-pill bg-warning text-dark">Warning</span>
+        <span class="badge rounded-pill bg-info text-dark">Info</span>
+        <span class="badge rounded-pill bg-light text-dark">Light</span>
+        <span class="badge rounded-pill bg-dark">Dark</span>
+    </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
