--- a/HTML-5_CSS-3/Cours/7-Bootstrap/breadcrumb.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/breadcrumb.html
@@ -9,7 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Exemples</h1>
+    <div class="container">
+      <h1>Exemples</h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">Home</li>
@@ -51,6 +52,7 @@
         </ol>
       </nav>
 
+    </div>
 
       <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
