--- a/HTML-5_CSS-3/Cours/7-Bootstrap/buttonsGroup.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/buttonsGroup.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <h1>Exemples de groupement de Boutons Bootstrap</h1>
+    <div class="container">
+        <h1>Exemples de groupement de Boutons Bootstrap</h1>
     <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-primary">Left</button>
         <button type="button" class="btn btn-primary">Middle</button>
@@ -144,6 +145,7 @@
 
         <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
         <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+    </div>
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
