--- a/HTML-5_CSS-3/Cours/7-Bootstrap/carroussel.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/carroussel.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <h1>Exemples de carroussel Bootstrap</h1>
+    <div class="container">
+      <h1>Exemples de carroussel Bootstrap</h1>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -218,6 +219,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+    </div>
   
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
