--- a/HTML-5_CSS-3/Cours/7-Bootstrap/navBar.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/navBar.html
@@ -453,7 +453,7 @@
         </div>
 
         <div class="space">
-            <h2>Exertnal content</h2>
+            <h2>External content</h2>
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
                     <h5 class="text-white h4">Collapsed content</h5>
