--- a/HTML-5_CSS-3/Cours/7-Bootstrap/navBar.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/navBar.html
@@ -82,7 +82,7 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="/assets/img/logo_chrome.png" alt="" width="30" height="24">
+                        <img src="./assets/img/logo_chrome.png" alt="" width="30" height="24">
                     </a>
                 </div>
             </nav>
@@ -93,7 +93,7 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="/assets/img/logo_chrome.png" alt="" width="30" height="24"
+                        <img src="./assets/img/logo_chrome.png" alt="" width="30" height="24"
                             class="d-inline-block align-text-top">
                         Bootstrap
                     </a>
