--- a/HTML-5_CSS-3/Cours/7-Bootstrap/progress.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/progress.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="space">
-        <h2>Avec une variable de hauteur</h2>
+        <h2>Avec une variable "height"</h2>
 
         <div class="space">
             <div class="progress" style="height: 1px;">
