Ajout Idex.html

--- a/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
@@ -12,8 +12,18 @@
 
 <body>
     <div class="container">
-        
-    </div>
+        <button type="button" class="btn btn-primary" id="bouton">Afficher le Toast</button>
+        <div class="toast" id="toast1" data-delay="5000" style="position: absolute; top: 1rem; right: 1rem; min-width:250px;" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="mr-auto">Pierre</strong>
+            <small>Il y a 11 mins</small>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="toast-body">
+            Un message Toast
+          </div>
+        </div>
+      </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
