Push avant NavBar

--- a/HTML-5_CSS-3/Cours/7-Bootstrap/closeBTN.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/closeBTN.html
@@ -11,16 +11,26 @@
 </head>
 
 <body>
-    <h1>Close Button</h1>
-    <button type="button" class="btn-close" aria-label="Close"></button>
+    <div class="container">
+        <div class="space">
+            <h1>Close Button</h1>
+            <button type="button" class="btn-close" aria-label="Close"></button>
 
-    <h1>disable state</h1>
-    <button type="button" class="btn-close" disabled aria-label="Close"></button>
+        </div>
+        <div class="space">
+            <h1>disable state</h1>
+            <button type="button" class="btn-close" disabled aria-label="Close"></button>
+        </div>
+        <div class="space">
+            <h1>White variant</h1>
+            <div class="black">
+                <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" disabled aria-label="Close"></button>
+            </div>
+        </div>
 
-    <h1>White variant</h1>
-    <div class="black">
-        <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
-        <button type="button" class="btn-close btn-close-white" disabled aria-label="Close"></button>
+        
+
     </div>
 
 
