--- a/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
@@ -12,18 +12,38 @@
 
 <body>
     <div class="container">
-        <button type="button" class="btn btn-primary" id="bouton">Afficher le Toast</button>
-        <div class="toast" id="toast1" data-delay="5000" style="position: absolute; top: 1rem; right: 1rem; min-width:250px;" aria-live="assertive" aria-atomic="true">
-          <div class="toast-header">
-            <strong class="mr-auto">Pierre</strong>
-            <small>Il y a 11 mins</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
-          </div>
-          <div class="toast-body">
-            Un message Toast
-          </div>
+        <div class="row">
+            <div class="col-xl-2 col-md-6 col-sm-12 red">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quasi at tempora incidunt quae minima ipsum
+                iusto cum ea reiciendis velit nemo doloribus cupiditate, dolorum nobis libero et sunt ducimus.
+            </div>
+            <div class="col-xl-2 col-md-6 col-sm-12 blue">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur minima suscipit ducimus fuga,
+                nemo facilis voluptatum laboriosam cupiditate a laborum exercitationem quidem nam dolores nihil alias
+                inventore iure necessitatibus?
+            </div>
+            <div class="col-xl-2 col-md-6 col-sm-12 green">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur minima suscipit ducimus fuga,
+                nemo facilis voluptatum laboriosam cupiditate a laborum exercitationem quidem nam dolores nihil alias
+                inventore iure necessitatibus?
+            </div>
+            <div class="col-xl-2 col-md-6 col-sm-12 purple">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur minima suscipit ducimus fuga,
+                nemo facilis voluptatum laboriosam cupiditate a laborum exercitationem quidem nam dolores nihil alias
+                inventore iure necessitatibus?
+            </div>
+            <div class="col-xl-2 col-md-6 col-sm-12 yellow">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur minima suscipit ducimus fuga,
+                nemo facilis voluptatum laboriosam cupiditate a laborum exercitationem quidem nam dolores nihil alias
+                inventore iure necessitatibus?
+            </div>
+            <div class="col-xl-2 col-md-6 col-sm-12 pink">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur minima suscipit ducimus fuga,
+                nemo facilis voluptatum laboriosam cupiditate a laborum exercitationem quidem nam dolores nihil alias
+                inventore iure necessitatibus?
+            </div>
         </div>
-      </div>
+    </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
