--- a/HTML-5_CSS-3/Cours/7-Bootstrap/listGroup.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/listGroup.html
@@ -206,7 +206,7 @@
                 Fifth checkbox
             </li>
         </ul>
-        <h3>Radio</h3>
+        <h3>avec Label</h3>
         <div class="list-group">
             <label class="list-group-item">
                 <input class="form-check-input me-1" type="checkbox" value="">
