--- a/HTML-5_CSS-3/Cours/7-Bootstrap/pagination.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/pagination.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <title>Bootstrap Carroussel</title>
+        <title>Bootstrap Pagination</title>
     </head>
 
 <body>
