Ajout du menu en bas de l'ecran

--- a/HTML-5_CSS-3/Cours/7-Bootstrap/badge.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/badge.html
@@ -64,7 +64,10 @@
         <span class="badge rounded-pill bg-light text-dark">Light</span>
         <span class="badge rounded-pill bg-dark">Dark</span>
     </div>
+    <div id="navMenu">
 
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
