--- a/HTML-5_CSS-3/Cours/7-Bootstrap/breadcrumb.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/breadcrumb.html
@@ -53,7 +53,10 @@
       </nav>
 
     </div>
+    <div id="navMenu">
 
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
       <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
