--- a/HTML-5_CSS-3/Cours/7-Bootstrap/pagination.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/pagination.html
@@ -148,6 +148,10 @@
             </nav>
         </div>
     </div>
+    <div id="navMenu">
+
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
 </body>
 
 </html>
