--- a/HTML-5_CSS-3/Cours/7-Bootstrap/spinners.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/spinners.html
@@ -131,6 +131,10 @@
       Loading...
     </button>
   </div>
+  <div id="navMenu">
+
+  </div>    
+  <script src="./assets/scripts/script.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
