--- a/HTML-5_CSS-3/Cours/7-Bootstrap/tooltips.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/tooltips.html
@@ -44,6 +44,10 @@
     </button>
   </div>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <div id="navMenu">
+
+  </div>    
+  <script src="./assets/scripts/script.js"></script>
   <script src="assets/js/tooltips.js"></script>
 </body>
 
