--- a/HTML-5_CSS-3/Cours/7-Bootstrap/closeBTN.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/closeBTN.html
@@ -33,7 +33,10 @@
 
     </div>
 
+    <div id="navMenu">
 
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
