--- a/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/index.html
@@ -44,6 +44,11 @@
             </div>
         </div>
     </div>
+
+    <div id="navMenu">
+
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
