--- a/HTML-5_CSS-3/Cours/7-Bootstrap/navAndTabs.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/navAndTabs.html
@@ -201,7 +201,10 @@
         </div>
     </div>
 
+    <div id="navMenu">
 
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
