--- a/HTML-5_CSS-3/Cours/7-Bootstrap/offcanvas.html
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/offcanvas.html
@@ -126,7 +126,10 @@
     </div>
 
 
+    <div id="navMenu">
 
+    </div>    
+    <script src="./assets/scripts/script.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 
 </body>
