--- a/Javascript/2-Exercices/Exo05-Variables-Majuscules/index.html
+++ b/Javascript/2-Exercices/Exo05-Variables-Majuscules/index.html
@@ -10,33 +10,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Les Fonctions Chaine</title>
+    <title>EXERCICE05 - LES VARIABLES - TRAITEMENT CHAINES</title>
 </head>
 
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">Les Fonctions Chaine</h1>
+            <h1 class="display-4">EXERCICE05 - Les Variables et Opérateurs Arithmétiques - Traitement d'une chaine</h1>
             <hr>
-            <p class="lead">Création et utilisaton<mark> des Fonctions() sur les chaînes </mark> en <mark>javascript</mark></p>
+            <p class="lead">Création et utilisation des<mark> méthodes applicables au chaines de caractères </mark> en <mark>Javascript</mark>
+            </p>
         </div>
 
         <form>
             <div class="form-group">
-                <label class="lead"></label>
                 <span class="result lead"></span>
-            </div>
+            </div>          
         </form>
     </div>
 
 
-
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="./main.js"></script>
+    
 </body>
 
 </html>
