correction menusousMenu partie 2

--- a/Javascript/2-Exercices/Exo22-MenuSousMenu-EnFonction/index.html
+++ b/Javascript/2-Exercices/Exo22-MenuSousMenu-EnFonction/index.html
@@ -12,9 +12,9 @@
         <h1 class="col">Exercice 22 Menu et sous menu</h1>
     </div>
     <div class="row justify-content-center align-item-center m-1">
-        <input type="number" placeholder="Nombre de chapitre " class="col-4 p-1 m-1"> 
-        <input type="number" placeholder="Nombre de partie par chapitre" class="col-4 p-1 m-1"> 
-        <button class="btn btn-success p-1 col-2">Créer le menu</button>
+        <input type="number" id="chapitre" placeholder="Nombre de chapitre " class="col-4 p-1 m-1"> 
+        <input type="number" id="partie" placeholder="Nombre de partie par chapitre" class="col-4 p-1 m-1"> 
+        <button class="btn btn-success p-1 col-2" id="creation">Créer le menu</button>
     </div>
     <div class="row justify-content-center">
         <div class="col m-1" id="result">
