--- a/Javascript/2-Exercices/BaseJS/Exo17-IfElse-CalculeImpots/index.html
+++ b/Javascript/2-Exercices/BaseJS/Exo17-IfElse-CalculeImpots/index.html
@@ -10,16 +10,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>EXERCICE16 - IFELSE - Taille Vêtements</title>
+    <title>EXERCICE17 - IFELSE - Calcul des Impôts</title>
 </head>
 
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">EXERCICE16 - LES STRUCTURES CONDITIONNELLES - Calcul de la prime de licenciement</h1>
+            <h1 class="display-4">EXERCICE17 - LES STRUCTURES CONDITIONNELLES - Calcul des impôts</h1>
             <hr>
-            <p class="lead">Création et utilisation des<mark> Structures Conditionnelles </mark> en<mark> Javascript
-                </mark>
+            <p class="lead">Création et utilisation des<mark> Structures Conditionnelles </mark> en<mark> Javascript </mark>
             </p>
         </div>
         <div class="result lead"></div>
