Fin Correction Exercices JS

--- a/Javascript/2-Exercices/BaseJS/Exo33-Notes-Fonctions/index..html
+++ b/Javascript/2-Exercices/BaseJS/Exo33-Notes-Fonctions/index..html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -9,23 +9,24 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- Fichier CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>EXERCICE30 - WHILE - Meilleurs Note</title>
+    <title>Exercice31 - FONCTIONS() - Meilleur note</title>
 </head>
 
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">EXERCICE 30 - WHILE - Meilleurs Note</h1>
+            <h1 class="display-4">Exercice33 - FONCTIONS() - Meilleurs Note</h1>
             <hr>
-            <p class="lead">Création et utilisation des<mark> <b>boucles While</b> </mark> en<mark> <b>Javascript</b>
-                </mark>
-            </p>
+            <p class="lead">Création et utilisation des<mark> Fonctions() </mark> en <mark>Javascript</mark></p>
         </div>
+        
+        <div id="menu"></div>
+        <h3>Notes déja saisies</h3>
 
-
-        <div class="result lead"></div>
+        
+        <ul class="result lead"></ul>
+        <div id="notes"></div>
 
     </div>
 
