--- a/nodejs/correction-ex1/html/accueil.html
+++ b/nodejs/correction-ex1/html/accueil.html
@@ -5,7 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Accueil</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style2.css" />
 </head>
 <body>
     <h1>Accueil</h1>
@@ -16,4 +17,5 @@
         <li><a href="/qui-sommes-nous">Qui sommes nous ?</a></li>
     </ul>
 </body>
+<script src="js/main.js"></script>
 </html>
